fix: pom plugin and add unit test